This is a pure C project.

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,9 @@
 ###############################################################################
 * text=auto
 
+*.c linguist-language=C
+*.h linguist-language=C
+
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
