Implement HID device init routines.

--- a/src/MagicTrackpad2PtpDevice/MagicTrackpad2PtpDevice.vcxproj
+++ b/src/MagicTrackpad2PtpDevice/MagicTrackpad2PtpDevice.vcxproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <ClCompile Include="Device.c" />
     <ClCompile Include="Driver.c" />
+    <ClCompile Include="Hid.c" />
     <ClCompile Include="InputInterrupt.c" />
     <ClCompile Include="Queue.c" />
   </ItemGroup>
