--- a/src/MagicTrackpad2PtpDevice/MagicTrackpad2PtpDevice.vcxproj.filters
+++ b/src/MagicTrackpad2PtpDevice/MagicTrackpad2PtpDevice.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClCompile Include="InputInterrupt.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Hid.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc">
