--- a/src/AmtPtpDevice.Settings/AmtPtpDevice.Settings.csproj
+++ b/src/AmtPtpDevice.Settings/AmtPtpDevice.Settings.csproj
@@ -94,6 +94,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Comm\UsbHidDeviceAccessSubscription.cs" />
+    <Compile Include="DataObjects\Mt2BatteryStatusReport.cs" />
     <Compile Include="DataObjects\PtpUserModeConfReport.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -130,7 +132,11 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>5.4.0</Version>
     </PackageReference>
+    <PackageReference Include="System.ValueTuple">
+      <Version>4.4.0</Version>
+    </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
