Initial MacBookPro10,2 & 11,1 trackpad theory port.

--- a/src/MagicTrackpad2PtpDevice/MagicTrackpad2PtpDevice.vcxproj
+++ b/src/MagicTrackpad2PtpDevice/MagicTrackpad2PtpDevice.vcxproj
@@ -56,6 +56,7 @@
     <ClCompile Include="Hid.c" />
     <ClCompile Include="InputInterrupt.c" />
     <ClCompile Include="Queue.c" />
+    <ClCompile Include="Utils.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AppleDefinition.h" />
