--- a/src/MagicTrackpad2PtpDevice/MagicTrackpad2PtpDevice.vcxproj.filters
+++ b/src/MagicTrackpad2PtpDevice/MagicTrackpad2PtpDevice.vcxproj.filters
@@ -19,11 +19,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Inf Include="MagicTrackpad2PtpDevice.inf">
-      <Filter>Driver Files</Filter>
-    </Inf>
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="Device.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -67,5 +62,10 @@
     <ResourceCompile Include="Resource.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Inf Include="AmtPtpDevice.inf">
+      <Filter>Driver Files</Filter>
+    </Inf>
   </ItemGroup>
 </Project>
