Implement MacBookAir6,2 & 7,2 / MacBook8 (Pro?) support.
Note: not tested.

--- a/src/MagicTrackpad2PtpDevice/MagicTrackpad2PtpDevice.vcxproj
+++ b/src/MagicTrackpad2PtpDevice/MagicTrackpad2PtpDevice.vcxproj
@@ -60,7 +60,9 @@
   <ItemGroup>
     <ClInclude Include="AppleDefinition.h" />
     <ClInclude Include="Device.h" />
+    <ClInclude Include="DeviceFamily\Wellspring5.h" />
     <ClInclude Include="DeviceFamily\Wellspring7A.h" />
+    <ClInclude Include="DeviceFamily\Wellspring8.h" />
     <ClInclude Include="DeviceFamily\WellspringMt2.h" />
     <ClInclude Include="Driver.h" />
     <ClInclude Include="Hid.h" />
