Implement a state machine for wellspring type 5.
Features like palm rejection have been significantly improved. Upper boundary and lower boundary need to be adjusted later.

--- a/src/MagicTrackpad2PtpDevice/MagicTrackpad2PtpDevice.vcxproj
+++ b/src/MagicTrackpad2PtpDevice/MagicTrackpad2PtpDevice.vcxproj
@@ -55,6 +55,7 @@
     <ClCompile Include="Driver.c" />
     <ClCompile Include="Hid.c" />
     <ClCompile Include="InputInterrupt.c" />
+    <ClCompile Include="InputStateMachine.c" />
     <ClCompile Include="Queue.c" />
   </ItemGroup>
   <ItemGroup>
@@ -67,6 +68,7 @@
     <ClInclude Include="Driver.h" />
     <ClInclude Include="Hid.h" />
     <ClInclude Include="HidCommon.h" />
+    <ClInclude Include="InputStateMachine.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Trace.h" />
     <ClInclude Include="Queue.h" />
